--- a/index.html
+++ b/index.html
@@ -1,21 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Loopstudios landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="./styles.css">
+    <title>Frontend Mentor | Loopstudios landing page</title>
 </head>
+
 <body>
-  About
+    <header>
+        <nav>
+            <div id="nav-bar">
+                <img src="./images/logo.svg" alt="Loopstudios Logo">
+                <div class="nav-items">
+                    <a class="nav-item">About</a>
+                    <a class="nav-item">Careers</a>
+                    <a class="nav-item">Events</a>
+                    <a class="nav-item">Products</a>
+                    <a class="nav-item">Support</a>
+
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="first-item">
+            <h1 class="first-item-title">
+                IMMERSIVE EXPERIENCES THAT DELIVER
+            </h1>
+        </section>
+
+        <section class="section-2">
+            <img src="./images//desktop/image-interactive.jpg" alt="Interactive">
+            <div class="text-box">
+                <h1>THE LEADER IN INTERACTIVE VR</h1>
+                <p>
+                    Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.
+                </p>
+            </div>
+        </section>
+
+        <section class="section-3">
+            <div class="section-header">
+                <h1>OUR CREATIONS</h1>
+                <button></button>
+            </div>
+        </section>
+    </main>
+    <!-- About
   Careers
   Events
   Products
@@ -49,11 +85,9 @@
   Products
   Support
 
-  © 2021 Loopstudios. All rights reserved.
+  © 2021 Loopstudios. All rights reserved. -->
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
 </body>
+
 </html>
