--- a/index.html
+++ b/index.html
@@ -98,9 +98,30 @@
                     <h1 class="card-title">MAKE IT <br> FISHEYE</h1>
                 </div>
             </div>
-
         </section>
     </main>
+
+    <footer>
+        <div class="footer-left">
+            <img src="./images/logo.svg" alt="Logo" class="footer-logo">
+            <div class="footer-nav">
+                <a class="nav-item">About</a>
+                <a class="nav-item">Careers</a>
+                <a class="nav-item">Events</a>
+                <a class="nav-item">Products</a>
+                <a class="nav-item">Support</a>
+            </div>
+        </div>
+        <div class="footer-right">
+            <div class="social-links">
+                <img src="./images/icon-facebook.svg" alt="icon-facebook">
+                <img src="./images/icon-twitter.svg" alt="icon-twitter">
+                <img src="./images/icon-pinterest.svg" alt="icon-pinterest">
+                <img src="./images/icon-instagram.svg" alt="icon-instagram">
+            </div>
+            <p>© 2021 Loopstudios. All rights reserved.</p>
+        </div>
+    </footer>
     <!-- About
   Careers
   Events
