--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                     <a class="nav-item">Events</a>
                     <a class="nav-item">Products</a>
                     <a class="nav-item">Support</a>
-
+                </div>
+                <div class="nav-expand mobile">
+                    <img src="./images/icon-hamburger.svg" alt="expand menu">
                 </div>
             </div>
         </nav>
@@ -101,7 +103,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer style="display: none;">
         <div class="footer-left">
             <img src="./images/logo.svg" alt="Logo" class="footer-logo">
             <div class="footer-nav">
