Mobile design finished

--- a/index.html
+++ b/index.html
@@ -49,61 +49,111 @@
         <section class="section-3">
             <div class="section-header">
                 <h1>OUR CREATIONS</h1>
-                <button>SEE ALL</button>
+                <button class="desktop">SEE ALL</button>
             </div>
             <div class="section-body">
-                <div class="card">
+                <div class="card desktop">
                     <div class="overlay"></div>
-
                     <img src="./images/desktop/image-deep-earth.jpg" alt="deep earth" class="card-img">
                     <h1 class="card-title">DEEP <br> EARTH</h1>
                 </div>
-                <div class="card">
+                <div class="card desktop">
                     <div class="overlay"></div>
 
                     <img src="./images/desktop/image-night-arcade.jpg" alt="Night Arcade" class="card-img">
                     <h1 class="card-title">NIGHT <br> ARCADE</h1>
                 </div>
-                <div class="card">
+                <div class="card desktop">
                     <div class="overlay"></div>
 
                     <img src="./images/desktop/image-soccer-team.jpg" alt="Soccer Team VR" class="card-img">
                     <h1 class="card-title">SOCCER <br> TEAM VR</h1>
                 </div>
-                <div class="card">
+                <div class="card desktop">
                     <div class="overlay"></div>
                     <img src="./images/desktop/image-grid.jpg" alt="The Grid" class="card-img">
                     <h1 class="card-title">THE <br> GRID</h1>
                 </div>
-                <div class="card">
+                <div class="card desktop">
                     <div class="overlay"></div>
 
                     <img src="./images/desktop/image-from-above.jpg" alt="From Up Above VR" class="card-img">
                     <h1 class="card-title">FROM UP <br> ABOVE VR</h1>
                 </div>
-                <div class="card">
+                <div class="card desktop">
                     <div class="overlay"></div>
 
                     <img src="./images/desktop/image-pocket-borealis.jpg" alt="Pocket Borealis" class="card-img">
                     <h1 class="card-title">POCKET <br> BOREALIS</h1>
                 </div>
-                <div class="card">
+                <div class="card desktop">
                     <div class="overlay"></div>
 
                     <img src="./images/desktop/image-curiosity.jpg" alt="The Curiosity" class="card-img">
                     <h1 class="card-title">THE <br> CURIOSITY</h1>
                 </div>
-                <div class="card">
+                <div class="card desktop">
                     <div class="overlay"></div>
 
                     <img src="./images/desktop/image-fisheye.jpg" alt="Make It Fisheye" class="card-img">
                     <h1 class="card-title">MAKE IT <br> FISHEYE</h1>
                 </div>
+
+                <!-- Mobile -->
+
+                <div class="card mobile">
+                    <div class="overlay"></div>
+                    <img src="./images/mobile/image-deep-earth.jpg" alt="deep earth" class="card-img">
+                    <h1 class="card-title">DEEP <br> EARTH</h1>
+                </div>
+                <div class="card mobile">
+                    <div class="overlay"></div>
+
+                    <img src="./images/mobile/image-night-arcade.jpg" alt="Night Arcade" class="card-img">
+                    <h1 class="card-title">NIGHT <br> ARCADE</h1>
+                </div>
+                <div class="card mobile">
+                    <div class="overlay"></div>
+
+                    <img src="./images/mobile/image-soccer-team.jpg" alt="Soccer Team VR" class="card-img">
+                    <h1 class="card-title">SOCCER <br> TEAM VR</h1>
+                </div>
+                <div class="card mobile">
+                    <div class="overlay"></div>
+                    <img src="./images/mobile/image-grid.jpg" alt="The Grid" class="card-img">
+                    <h1 class="card-title">THE <br> GRID</h1>
+                </div>
+                <div class="card mobile">
+                    <div class="overlay"></div>
+
+                    <img src="./images/mobile/image-from-above.jpg" alt="From Up Above VR" class="card-img">
+                    <h1 class="card-title">FROM UP <br> ABOVE VR</h1>
+                </div>
+                <div class="card  mobile">
+                    <div class="overlay"></div>
+
+                    <img src="./images/mobile/image-pocket-borealis.jpg" alt="Pocket Borealis" class="card-img">
+                    <h1 class="card-title">POCKET <br> BOREALIS</h1>
+                </div>
+                <div class="card mobile">
+                    <div class="overlay"></div>
+
+                    <img src="./images/mobile/image-curiosity.jpg" alt="The Curiosity" class="card-img">
+                    <h1 class="card-title">THE <br> CURIOSITY</h1>
+                </div>
+                <div class="card mobile">
+                    <div class="overlay"></div>
+
+                    <img src="./images/mobile/image-fisheye.jpg" alt="Make It Fisheye" class="card-img">
+                    <h1 class="card-title">MAKE IT <br> FISHEYE</h1>
+                </div>
+                <button class="mobile">SEE ALL</button>
+
             </div>
         </section>
     </main>
 
-    <footer style="display: none;">
+    <footer>
         <div class="footer-left">
             <img src="./images/logo.svg" alt="Logo" class="footer-logo">
             <div class="footer-nav">
