--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 </head>
 
 <body>
+    <div class="drawer" id="drawer">
+        <div class="drawer-header">
+            <img src="./images/logo.svg" alt="Loopstudios Logo">
+            <img src="./images/icon-close.svg" onclick="closeDrawer()" alt="Close icon">
+        </div>
+        <div class="drawer-body">
+            <a class="nav-item">About</a>
+            <a class="nav-item">Careers</a>
+            <a class="nav-item">Events</a>
+            <a class="nav-item">Products</a>
+            <a class="nav-item">Support</a>
+        </div>
+    </div>
     <header>
         <nav>
             <div id="nav-bar">
@@ -23,7 +36,7 @@
                     <a class="nav-item">Support</a>
                 </div>
                 <div class="nav-expand mobile">
-                    <img src="./images/icon-hamburger.svg" alt="expand menu">
+                    <img src="./images/icon-hamburger.svg" onclick="openDrawer()" alt="expand menu">
                 </div>
             </div>
         </nav>
@@ -174,41 +187,7 @@
             <p>© 2021 Loopstudios. All rights reserved.</p>
         </div>
     </footer>
-    <!-- About
-  Careers
-  Events
-  Products
-  Support
-
-  Immersive experiences that deliver
-
-  The leader in interactive VR
-
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
-
-  Our creations
-
-  See all
-
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
-
-  About
-  Careers
-  Events
-  Products
-  Support
-
-  © 2021 Loopstudios. All rights reserved. -->
+    <script src="./script.js"></script>
 
 
 </body>
